[gd_scene load_steps=25 format=3 uid="uid://x2fs7253ifji"]

[ext_resource type="Script" uid="uid://sydi7ft0g0k3" path="res://Inicio/Scripts/scj.gd" id="1_4hqg2"]
[ext_resource type="Shader" uid="uid://couu76j0ckis6" path="res://Inicio/intro.gdshader" id="2_eb7bp"]
[ext_resource type="Texture2D" uid="uid://b0xt5r55yac1u" path="res://Sistema/Sprites/fondoUI.png" id="3_gd3tg"]
[ext_resource type="FontFile" uid="uid://briqh76e868qq" path="res://Sistema/ZCOOLKuaiLe-Regular.ttf" id="3_ylbko"]
[ext_resource type="StyleBox" uid="uid://dnshdqyfowjc1" path="res://Inicio/SCJ2jugadoresFocus.tres" id="4_ttvks"]
[ext_resource type="StyleBox" uid="uid://7hyp1rmifdgn" path="res://Inicio/SCJ2jugadoresHover.tres" id="5_aokl4"]
[ext_resource type="StyleBox" uid="uid://bicqyblk1cml8" path="res://Inicio/SCJ2jugadoresPressedtres.tres" id="6_krrxp"]
[ext_resource type="StyleBox" uid="uid://quefu42ydcfb" path="res://Inicio/SCJ2jugadoresNormal.tres" id="7_7dels"]
[ext_resource type="StyleBox" uid="uid://88ajiona10oy" path="res://Inicio/SCJ3jugadoresFocus.tres" id="8_btt0p"]
[ext_resource type="StyleBox" uid="uid://dbjcptanntae7" path="res://Inicio/SCJ3jugadoresHover.tres" id="9_ffef2"]
[ext_resource type="StyleBox" uid="uid://csn8lopkh5rrq" path="res://Inicio/SCJ3jugadoresPressedtres.tres" id="10_oglkk"]
[ext_resource type="StyleBox" uid="uid://bcbdt631yhd7f" path="res://Inicio/SCJ3jugadoresNormal.tres" id="11_8f83i"]
[ext_resource type="StyleBox" uid="uid://cfeo2sqajgsij" path="res://Inicio/SCJ4jugadoresFocus.tres" id="12_btt0p"]
[ext_resource type="StyleBox" uid="uid://cvbyvbtwaigie" path="res://Inicio/SCJ4jugadoresHover.tres" id="13_ffef2"]
[ext_resource type="StyleBox" uid="uid://cfnb7qc7hnjqe" path="res://Inicio/SCJ4jugadoresPressedtres.tres" id="14_oglkk"]
[ext_resource type="StyleBox" uid="uid://bvi3fn7uoj0c6" path="res://Inicio/SCJ4jugadoresNormal.tres" id="15_8f83i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ylbko"]
shader = ExtResource("2_eb7bp")
shader_parameter/effect_filling = 1.0
shader_parameter/angle = 90.0
shader_parameter/keep_saturation = 0.0
shader_parameter/keep_luminance = 1.0
shader_parameter/color_start = Color(1, 0.501961, 0, 1)
shader_parameter/start_pos = 0.0
shader_parameter/color_mid = Color(0.556863, 0.862745, 0.72549, 1)
shader_parameter/mid_pos = 0.5
shader_parameter/color_end = Color(0, 0.713726, 0.996078, 1)
shader_parameter/end_pos = 1.0
shader_parameter/midpos_enabled = true
shader_parameter/range_start = 0.0
shader_parameter/range_end = 1.0
shader_parameter/range_softedge = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ah3u2"]
bg_color = Color(0.0392157, 0.329412, 0.415686, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kpcbp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajlxt"]
bg_color = Color(0, 0.305882, 0.203922, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wj063"]
bg_color = Color(0, 0.141176, 0.0941176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u206l"]
bg_color = Color(0, 0.388235, 0.258824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vx8u"]
bg_color = Color(0, 0.223529, 0.14902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obelw"]
bg_color = Color(0, 0.470588, 0.313726, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(5, 5)

[node name="SCJ" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hqg2")

[node name="PanelContainer2" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_ylbko")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme_override_styles/panel = SubResource("StyleBoxFlat_ah3u2")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ah3u2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ylbko")
theme_override_font_sizes/font_size = 30
text = "Selecciona el n√∫mero de jugadores"

[node name="Panel" type="Panel" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_ylbko")
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxTexture_kpcbp")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ylbko")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("4_ttvks")
theme_override_styles/hover = ExtResource("5_aokl4")
theme_override_styles/pressed = ExtResource("6_krrxp")
theme_override_styles/normal = ExtResource("7_7dels")
text = "2 Jugadores"

[node name="Button2" type="Button" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ylbko")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("8_btt0p")
theme_override_styles/hover = ExtResource("9_ffef2")
theme_override_styles/pressed = ExtResource("10_oglkk")
theme_override_styles/normal = ExtResource("11_8f83i")
text = "3 Jugadores"

[node name="Button3" type="Button" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ylbko")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("12_btt0p")
theme_override_styles/hover = ExtResource("13_ffef2")
theme_override_styles/pressed = ExtResource("14_oglkk")
theme_override_styles/normal = ExtResource("15_8f83i")
text = "4 Jugadores"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxTexture_kpcbp")

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HSeparator3" type="HSeparator" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxTexture_kpcbp")

[node name="Button" type="Button" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_ajlxt")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wj063")
theme_override_styles/hover = SubResource("StyleBoxFlat_u206l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6vx8u")
theme_override_styles/normal = SubResource("StyleBoxFlat_obelw")
disabled = true
text = "Continuar"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
z_index = -18
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_gd3tg")
expand_mode = 3

[connection signal="pressed" from="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_2PJ_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_3PJ_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Button3" to="." method="_on_4PJ_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_continuar_pressed"]
